# expected

./: .clang-format  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml
examples/: CMakeLists.txt  example1.cpp
requirements-dev/: README.md  lint.in
src/: CMakeLists.txt
src/base/: CMakeLists.txt
src/base/project/: CMakeLists.txt  example.cpp  example.hpp  example.t.cpp
src/smd/: CMakeLists.txt
src/smd/expected/: CMakeLists.txt  expected.cpp  expected.hpp  expected.t.cpp
